change swagger config
