# dtos/user-dto.js
@@ -3,7 +3,7 @@
 class UserDto {
     constructor(id, phone_number, updatedAt, createdAt) {
         this.id = id;
-        this.phoneNumber = phone_number;
+        this.phone_number = phone_number;
         this.updatedAt = updatedAt;
         this.createdAt = createdAt;
     }
